[package]
name = "judge_main"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.117"
uuid = { version = "1.10.0", features = ["v4", "serde"] }